<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cerealbox.jobtrack.TrackNewApplication">




    <TextView
        android:text="@string/company_name"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:id="@+id/company_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/position"
        android:id="@+id/position_text"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:paddingBottom="20dp"

        android:layout_below="@id/company_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
    android:layout_weight="1"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/company_text"
    android:id="@+id/company_field"
    />

    <EditText
        android:layout_weight="1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/company_field"
        android:layout_alignRight="@id/company_field"
        android:layout_below="@id/company_field"
        android:id="@+id/position_field"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        android:id="@+id/saveButton"
        android:onClick="saveApplication"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/dateField"
        android:layout_alignEnd="@+id/dateField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date_text"
        android:id="@+id/dateText"
        android:onClick="setDate"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_below="@+id/position_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateField"
        android:focusable="false"
        android:onClick="setDate"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_below="@+id/dateText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/dateText"
        android:layout_toRightOf="@id/dateText"/>


</RelativeLayout>
